--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.0",
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@headlessui/react": "^1.6.3",
         "@heroicons/react": "^1.0.6",
         "@thirdweb-dev/react": "^2.3.12",
